# AAHumanIoT

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  Untitled Diagram.drawio  config.h.in  fruncellompc.c
cello.bak/: CMakeLists.txt  cello.c  cello.h
frunzik.bak/: CMakeLists.txt  frunzik.c  frunzik.h
include/: func01.h
local/include/: local.h
local/src/: local.c
src/: func01.c
